# pwd

./: .gitignore  README.md  manifest.json  next.config.mjs  package.json  plan.lua  pnpm-lock.yaml  tsconfig.json
client/: background.js  content.js  manifest.json  popup.html  popup.js  style.css
extension/: background.js  content.js  manifest.json  popup.html  popup.js  webpack.config.js
extension/src/background/: index.ts
extension/src/content-script/: index.ts
extension/src/popup/: index.html  index.js
prisma/: schema.prisma
public/model/: wake-word-model.json
server/: .gitignore  main.py  pyproject.toml  requirements.txt
server/config/: settings.py
server/database/: db.py
server/models/: models.py
server/routes/: conversation.py  conversations.py  message.py  speech.py  text.py  user_route.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/speech/: page.tsx
src/app/vision/: page.tsx
src/components/: Footer.tsx  Header.tsx  ImageAnalysisTool.tsx  SpeechToTextTool.tsx  TextToSpeechTool.tsx  VoiceAssistant.tsx  WakeWordDetector.tsx  WebPageAnalyzer.tsx  dataInitializer.tsx
src/components/chat/: aiChatSidebar.tsx  chat.tsx  chatSidebar.tsx
src/components/layouts/: content.tsx  main.tsx
src/hooks/: useAzureSpeech.ts  useAzureVision.ts  useWebSocket.ts
src/lib/: actions.ts  api.ts  openai.ts  providers.tsx
src/models/: nlu.ts  stt.ts  tts.ts  vision.ts
src/redux/: store.tsx
src/types/: index.d.ts
src/utils/: audio.ts  azureConfig.ts  domManipulation.ts  helperFunctions.ts  imageProcessing.ts
(+18 files in other folders)
