[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["AddonayOsoro <oaddonay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.2"}
pydantic = "^2.9.2"
openai = "^1.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
