[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["AddonayOsoro <oaddonay@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.2"}
pydantic = "^2.9.2"
openai = "^1.52.0"
motor = "^3.6.0"
beanie = "^1.27.0"
aiofiles = "^24.1.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
